--- a/Latitud_MinMax/.classpath
+++ b/Latitud_MinMax/.classpath
@@ -110,5 +110,7 @@
 	<classpathentry kind="lib" path="/usr/share/hadoop-2.2.0/share/hadoop/mapreduce/hadoop-mapreduce-client-core-2.2.0.jar"/>
 	<classpathentry kind="lib" path="/usr/share/hadoop-2.2.0/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-2.2.0.jar"/>
 	<classpathentry kind="lib" path="/usr/share/hadoop-2.2.0/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.2.0-tests.jar"/>
+	<classpathentry kind="lib" path="/usr/share/hadoop-2.2.0/share/hadoop/hdfs/hadoop-hdfs-2.2.0.jar"/>
+	<classpathentry kind="lib" path="/usr/share/hadoop-2.2.0/share/hadoop/hdfs/hadoop-hdfs-nfs-2.2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
