--- a/trunk/Latitud_MinMax/.project
+++ b/trunk/Latitud_MinMax/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Latitud_MinMax</name>
+	<name>HDFS_Example</name>
 	<comment></comment>
 	<projects>
 	</projects>
